--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
 	    <artifactId>mail</artifactId>
 	    <version>1.4</version>
 	</dependency>
-	
+	<dependency>
+	    <groupId>net.sourceforge.htmlunit</groupId>
+	    <artifactId>htmlunit</artifactId>
+	    <version>2.46.0</version>
+	</dependency>
   </dependencies>
 </project>
