--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 	    <artifactId>mail</artifactId>
 	    <version>1.4</version>
 	</dependency>
-	
+      <!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit -->
+      <dependency>
+          <groupId>net.sourceforge.htmlunit</groupId>
+          <artifactId>htmlunit</artifactId>
+          <version>2.46.0</version>
+      </dependency>
   </dependencies>
 </project>
