--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,17 @@
 	    <groupId>javax.mail</groupId>
 	    <artifactId>mail</artifactId>
 	    <version>1.4</version>
-	</dependency>
-      <!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit -->
+	</dependency>      
       <dependency>
           <groupId>net.sourceforge.htmlunit</groupId>
           <artifactId>htmlunit</artifactId>
           <version>2.46.0</version>
-      </dependency>
+      </dependency>      
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.16</version>
+	</dependency>
+      
   </dependencies>
 </project>
